--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": "^8.1",
         "bmatovu/multi-auth": "^12.0",
+        "browner12/helpers": "^3.5",
         "guzzlehttp/guzzle": "^7.2",
         "intervention/image": "^2.7",
         "laravel/breeze": "^1.21",
@@ -16,7 +17,8 @@
         "laravelcollective/html": "^6.4",
         "realrashid/sweet-alert": "^7.0",
         "spatie/image": "^2.2",
-        "spatie/laravel-html": "^3.2"
+        "spatie/laravel-html": "^3.2",
+        "syamsoul/laravel-set-env": "^1.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
