--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": "^8.1",
         "bmatovu/multi-auth": "^12.0",
         "browner12/helpers": "^3.5",
+        "drewm/mailchimp-api": "^2.5",
         "guzzlehttp/guzzle": "^7.2",
         "intervention/image": "^2.7",
         "laravel/breeze": "^1.21",
@@ -18,6 +19,7 @@
         "realrashid/sweet-alert": "^7.0",
         "spatie/image": "^2.2",
         "spatie/laravel-html": "^3.2",
+        "spatie/laravel-newsletter": "^5.1",
         "syamsoul/laravel-set-env": "^1.0"
     },
     "require-dev": {
