--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,6 @@
         "php": "^8.1",
         "bmatovu/multi-auth": "^12.0",
         "browner12/helpers": "^3.5",
-        "drewm/mailchimp-api": "^2.5",
         "guzzlehttp/guzzle": "^7.2",
         "intervention/image": "^2.7",
         "laravel/breeze": "^1.21",
@@ -16,6 +15,7 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "laravelcollective/html": "^6.4",
+        "mailchimp/marketing": "^3.0",
         "realrashid/sweet-alert": "^7.0",
         "spatie/image": "^2.2",
         "spatie/laravel-html": "^3.2",
