--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
         "php": "^8.1",
         "bmatovu/multi-auth": "^12.0",
         "browner12/helpers": "^3.5",
-        "guzzlehttp/guzzle": "^7.2",
+        "guzzlehttp/guzzle": "^7.7",
         "intervention/image": "^2.7",
         "laravel/breeze": "^1.21",
         "laravel/framework": "^10.10",
@@ -17,6 +17,7 @@
         "mailchimp/marketing": "^3.0",
         "realrashid/sweet-alert": "^7.0",
         "spatie/image": "^2.2",
+        "stripe/stripe-php": "^10.21",
         "syamsoul/laravel-set-env": "^1.0"
     },
     "require-dev": {
