--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,7 @@
         "mailchimp/marketing": "^3.0",
         "realrashid/sweet-alert": "^7.0",
         "spatie/image": "^2.2",
-        "stripe/stripe-php": "^11.0",
-        "syamsoul/laravel-set-env": "^1.0"
+        "stripe/stripe-php": "^11.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
