--- a/composer.json
+++ b/composer.json
@@ -8,16 +8,17 @@
         "php": "^8.1",
         "bmatovu/multi-auth": "^12.0",
         "browner12/helpers": "^3.5",
+        "drewm/mailchimp-api": "^2.5",
         "guzzlehttp/guzzle": "^7.7",
         "intervention/image": "^2.7",
         "laravel/breeze": "^1.21",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
-        "mailchimp/marketing": "^3.0",
         "realrashid/sweet-alert": "^7.0",
         "spatie/image": "^2.2",
-        "stripe/stripe-php": "^11.0"
+        "stripe/stripe-php": "^11.0",
+        "yajra/laravel-datatables-oracle": "^10.8"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
