--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,7 @@
         "laravel/tinker": "^2.8",
         "realrashid/sweet-alert": "^7.0",
         "spatie/image": "^2.2",
-        "stripe/stripe-php": "^11.0",
-        "yajra/laravel-datatables-oracle": "^10.8"
+        "stripe/stripe-php": "^11.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
