--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "barryvdh/laravel-dompdf": "^2.0",
         "bmatovu/multi-auth": "^12.0",
         "browner12/helpers": "^3.5",
         "guzzlehttp/guzzle": "^7.7",
@@ -14,7 +15,6 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
-        "realrashid/sweet-alert": "^7.1",
         "spatie/image": "^2.2",
         "stripe/stripe-php": "^11.0"
     },
