--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,8 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
+        "php-flasher/flasher-laravel": "^1.15",
+        "php-flasher/flasher-notyf-laravel": "^1.15",
         "spatie/image": "^2.2",
         "stripe/stripe-php": "^11.0"
     },
