--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         "bmatovu/multi-auth": "^12.0",
         "browner12/helpers": "^3.5",
         "guzzlehttp/guzzle": "^7.7",
-        "intervention/image": "^2.7",
+        "intervention/image": "*",
         "laravel/breeze": "^1.21",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
